src/test/ui/mismatched_types/for-loop-has-unit-body.stderr
error[E0308]: mismatched types
  --> $DIR/for-loop-has-unit-body.rs:13:9
   |
13 |         x //~ ERROR mismatched types
   |         ^ expected (), found integral variable
   |
   = note: expected type `()`
              found type `{integer}`

error: aborting due to previous error

